# image_preprocessor

./: pyproject.toml  requirements.txt
.github/workflows/: install_and_test.yaml
src/image_processor/: image.py
src/image_processor/features/: rotator.py
tests/: test_image.py
